# dbscan-gps

./: .gitmodules  CMakeLists.txt  FastFilter.cxx  FastFilter.h  GpsFilter.cxx  GpsFilter.h  README.md  dbscan-gps.cpp  dbscan-gps.hxx  filesystem.cxx  filesystem.h  filtersFunctions.cpp  filtersFunctions.h  main.cpp
data/: rules.conf
data/tracks/: gps_track_1_troll_Lagerny_Priborny  gps_track_203  gps_track_3troll  gps_track_7troll  gps_track_info3  gps_track_info4
test/: CMakeLists.txt  editable_track.c
